# adventofcode

./: .flake8  .gitignore  LICENSE  Pipfile  README.md  entrypoint.py  jupyter_notebook_config.py  mypy.ini  nbcat  nbmypy  pyproject.toml  setup.py  start  stop
.github/workflows/: codeql.yml
2015/: 2015-README.md  advent10.py  advent11.py  advent12.py  advent13.py  advent14.py  advent15.py  advent16.py  advent17.py  advent18.py  advent19.py  advent21.py  advent22.py  advent23.py  advent24.py  advent25.py  advent6.py  advent7.py  advent8.py  advent9.py
2016/: 2016-README.md  puzzle01.py  puzzle02.py  puzzle03.py  puzzle04.py  puzzle05.py  puzzle06.py  puzzle07.py  puzzle08.py  puzzle09.py  puzzle10.py  puzzle11.py  puzzle12.py  puzzle13.py  puzzle14.py  puzzle15.py  puzzle16.py  puzzle17.py  puzzle18.py  puzzle19.py  puzzle20.py  puzzle21.py  puzzle22.py  puzzle23.py  puzzle24.py  puzzle25.py
2017/: Day 01.ipynb  Day 02.ipynb  Day 03.ipynb  Day 04.ipynb  Day 05.ipynb  Day 06.ipynb  Day 07.ipynb  Day 08.ipynb  Day 09.ipynb  Day 10.ipynb  Day 11.ipynb  Day 12.ipynb  Day 13.ipynb  Day 14.ipynb  Day 15.ipynb  Day 16.ipynb  Day 17.ipynb  Day 18.ipynb  Day 19.ipynb  Day 20.ipynb  Day 21.ipynb  Day 22.ipynb  Day 23.ipynb  Day 24.ipynb  Day 25.ipynb  knothash.py  ruff.toml
2018/: Day 01.ipynb  Day 02.ipynb  Day 03.ipynb  Day 04.ipynb  Day 05.ipynb  Day 06.ipynb  Day 07.ipynb  Day 08.ipynb  Day 09.ipynb  Day 10.ipynb  Day 11.ipynb  Day 12.ipynb  Day 13.ipynb  Day 14.ipynb  Day 15.ipynb  Day 16.ipynb  Day 17.ipynb  Day 18.ipynb  Day 19.ipynb  Day 20.ipynb  Day 21.ipynb  Day 22.ipynb  Day 23.ipynb  Day 24.ipynb  Day 25.ipynb  Day17.ipynb
2019/: Day 01.ipynb  Day 02.ipynb  Day 03.ipynb  Day 04.ipynb  Day 05.ipynb  Day 06.ipynb  Day 07.ipynb  Day 08.ipynb  Day 09.ipynb  Day 10.ipynb  Day 11.ipynb  Day 12.ipynb  Day 13.ipynb  Day 14.ipynb  Day 15.ipynb  Day 16.ipynb  Day 17.ipynb  Day 18.ipynb  Day 19.ipynb  Day 20.ipynb  Day 21.ipynb  Day 22.ipynb  Day 23.ipynb  Day 24.ipynb  Day 25.ipynb  intcode.py  ruff.toml
2020/: Day 01.ipynb  Day 02.ipynb  Day 03.ipynb  Day 04.ipynb  Day 05.ipynb  Day 06.ipynb  Day 07.ipynb  Day 08.ipynb  Day 09.ipynb  Day 10.ipynb  Day 11.ipynb  Day 12.ipynb  Day 13.ipynb  Day 14.ipynb  Day 15.ipynb  Day 16.ipynb  Day 17.ipynb  Day 18.ipynb  Day 19.ipynb  Day 20.ipynb  Day 21.ipynb  Day 22.ipynb  Day 23.ipynb  Day 24.ipynb  Day 25.ipynb
2021/: Day 01.ipynb  Day 02.ipynb  Day 03.ipynb  Day 04.ipynb  Day 05.ipynb  Day 06.ipynb  Day 07.ipynb  Day 08.ipynb  Day 09.ipynb  Day 10.ipynb  Day 11.ipynb  Day 12.ipynb  Day 13.ipynb  Day 14.ipynb  Day 15.ipynb  Day 16.ipynb  Day 17.ipynb  Day 18.ipynb  Day 19.ipynb  Day 20.ipynb  Day 21.ipynb  Day 22.ipynb  Day 23.ipynb  Day 24.ipynb  Day 25.ipynb
2022/: Day 01.ipynb  Day 02.ipynb  Day 02.py  Day 03.ipynb  Day 03.py  Day 04.ipynb  Day 04.py  Day 05.ipynb  Day 05.py  Day 06.ipynb  Day 06.py  Day 07.ipynb  Day 08.ipynb  Day 09.ipynb  Day 10.ipynb  Day 11.ipynb  Day 12.ipynb  Day 13.ipynb  Day 14.ipynb  Day 15.ipynb  Day 16.ipynb  Day 17.ipynb  Day 18.ipynb  Day 19.ipynb  Day 20.ipynb  Day 21.ipynb  Day 22.ipynb  Day 23.ipynb  Day 24.ipynb  Day 25.ipynb
2023/: Day 01.ipynb  Day 02.ipynb  Day 03.ipynb  Day 04.ipynb  Day 05.ipynb  Day 06.ipynb  Day 07.ipynb  Day 08.ipynb  Day 09.ipynb  Day 10.ipynb  Day 11.ipynb  Day 12.ipynb  Day 13.ipynb  Day 14.ipynb  Day 15.ipynb  Day 16.ipynb  Day 17.ipynb  Day 18.ipynb  Day 19.ipynb
jupyter_support/ipython/profile_default/startup/: typecheck.py
rust/2018/: Cargo.toml
rust/2018/src/: day01.rs  day02.rs  day03.rs  lib.rs
rust/2019/: Cargo.toml
rust/2019/src/: day01.rs  lib.rs
rust/2020/: Cargo.toml
rust/2020/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  lib.rs
rust/2021/: Cargo.toml
rust/2021/src/: day18.rs  lib.rs
