[tool.poetry]
name = "adventofcode"
version = "2023"
description = "Advent of Code puzzle solutions"
authors = ["Martijn Pieters <github.com@zopatista.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mjpieters/adventofcode"
keywords = ["advent-of-code", "aoc", "puzzles", "solutions"]


[tool.poetry.dependencies]
python = "^3.12"
jupyter = "*"
graphviz = "*"
numpy = "*"
pillow = "*"
marshmallow = "*"
matplotlib = "*"
advent-of-code-data = "*"
scipy = "*"
astor = "*"
sympy = "*"
regex = "*"
requests = "*"
easing-functions = "*"


[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "^0.1.6"


[tool.ruff]
extend-include = ["*.ipynb"]
ignore = ["E402", "E501"]
unfixable = ["B"]
line-length = 88
select = ["B", "E", "F", "W", "B9"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
