[tool.poetry]
name = "adventofcode"
version = "2023"
description = "Advent of Code puzzle solutions"
authors = ["Martijn Pieters <github.com@zopatista.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mjpieters/adventofcode"
keywords = ["advent-of-code", "aoc", "puzzles", "solutions"]


[tool.poetry.dependencies]
python = "^3.12"
jupyter = "*"
graphviz = "*"
numpy = "*"
pillow = "*"
marshmallow = "*"
matplotlib = "*"
scipy = "*"
astor = "*"
sympy = "*"
regex = "*"
requests = "*"
easing-functions = "*"

[tool.poetry.dependencies.advent-of-code-data]
# Commit that provides type hints for the library, use until
# new release is made available.
"git"="https://github.com/wimglenn/advent-of-code-data.git"
"rev"="40d1ef7c99bf26bc5cc60cc6e2aaf2e6054ff596"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pyright = "^1.1.339"


[tool.ruff]
extend-include = ["*.ipynb"]
extend-exclude = ["jupyter_notebook_config.py", "2015/", "2016/"]
ignore = ["E402", "E501"]
unfixable = ["B"]
line-length = 88
select = ["B", "E", "F", "W", "B9"]


[tool.pyright]
include = ["."]
exclude = ["2015", "2016"]
ignore = ["jupyter_notebook_config.py"]
strict = ["2023"]
# pyright 1.1.339 "standard" mode, manually applied until pylance includes that version
reportFunctionMemberAccess = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportOverlappingOverload = "error"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
